Bug 161030 - Vertical Tab dialogs--width available for Tab name is too narrow with jumping view of Tab names
Summary: Vertical Tab dialogs--width available for Tab name is too narrow with jumping...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high major
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:25.2.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: Dialog-UX Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2024-05-10 14:33 UTC by V Stuart Foote
Modified: 2024-06-24 17:01 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Dialog with vertical tabs too narrow (86.84 KB, image/png)
2024-05-30 23:21 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2024-05-10 14:33:51 UTC
Noticed when confirming bug 161020 that the available width of the vertical tab bar is fixed and is too narrow to show the full name of each tab. Resizing dialog wider does not help.

Unfortunately with D down cursor movement between Tab items, landing on a wider label, the shown entry of the Tab bar jumps to the ending of the name and the start of each entry is hidden.

Strangely, with U up cursor movement it jumps to the start of the name.
Comment 1 V Stuart Foote 2024-05-10 14:35:22 UTC
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 505803e2cb4d60153be2218a17ede8e34d95b42e
CPU threads: 8; OS: Windows 10 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Olivier Hallot 2024-05-30 23:21:10 UTC
Created attachment 194466 [details]
Dialog with vertical tabs too narrow
Comment 3 Olivier Hallot 2024-05-30 23:22:48 UTC
After

----<8----
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7629d31f02a9fdbdf71295744c8869dee5cb4c54

tdf#161006 tdf#161049 tdf#161020 tdf#161047 fix VertTabCtrl size calculation

It will be available in 24.8.0.

----<8----

We still have the vertical tabs too narrow. See image attached for kf5

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 010551e5c1277ed32e8b279660c27490bace0767
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: pt-BR
Calc: threaded
Comment 4 Heiko Tietze 2024-05-31 07:18:08 UTC
The tabbar width adjusts apparently to English (not perfectly, see bug 161030) but not the localized text length.
Comment 5 Commit Notification 2024-06-03 07:32:44 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6ea343e6fb2dc3539823dee60c9c6f96fc16275

tdf#161030 Improve vertical Tab list display

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-21 13:53:48 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d1400c14d8e37dce8deed80fe0b2f10f6115673a

tdf#161659: Revert "tdf#161030 Improve vertical... ( 24.8 only )

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.