tdf#161030 Improve vertical Tab list display

* Increase width a bit to allow for longer tab names
* Avoid jumping while moving through the list with arrow keys

Change-Id: Ie418dd40c5f69dcdea8fa07743ff26e3c9e04ee2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168251
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>